SKY-282 Fix Sonnet logo alignment

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -28,7 +28,7 @@
     height: 64px;
   }
 
-  @include mq-min-width(md) {
+  @include mq-min-width(lg) {
     padding-inline: 20px;
   }
 
